建立每個主頁面，contact頁面樣式完成

--- a/src/assets/scss/helpers/pages/_index.scss
+++ b/src/assets/scss/helpers/pages/_index.scss
@@ -154,7 +154,9 @@ header {
 }
 .work-item {
   width: 100%;
-  background-color: #eeeeee;
+  &.bg-color{
+    background-color: #eeeeee;
+  }
   .work-space {
     width: 80%;
   }
