--- a/src/assets/scss/helpers/pages/_home.scss
+++ b/src/assets/scss/helpers/pages/_home.scss
@@ -81,6 +81,22 @@ nav {
     transform: scaleX(1);
     transform-origin: bottom left;
   }
+  &.black:after{
+    content: "";
+    position: absolute;
+    bottom: -6px;
+    left: 0;
+    width: 100%;
+    height: 3px;
+    background-color: #000;
+    transform: scaleX(0);
+    transform-origin: bottom right;
+    transition: transform 0.2s ease-out;
+  }
+  &.black:hover::after {
+    transform: scaleX(1);
+    transform-origin: bottom left;
+  }
 }
 
 /*footer*/
