加上表單驗證，RWD修改

--- a/src/assets/scss/helpers/pages/_index.scss
+++ b/src/assets/scss/helpers/pages/_index.scss
@@ -10,6 +10,13 @@
     letter-spacing: 2px;
   }
 }
+@include phone{
+  .index{
+    span{
+      display: block;
+    }
+  }
+}
 /* header */
 header {
   height: 1080px;
