--- a/src/assets/scss/helpers/pages/_contact.scss
+++ b/src/assets/scss/helpers/pages/_contact.scss
@@ -10,6 +10,13 @@
     letter-spacing: 2px;
   }
 }
+@include phone{
+  .contact{
+    span{
+      display: block;
+    }
+  }
+}
 
 /* Workflow detail */
 .workflow-spacing {
@@ -136,5 +143,10 @@
   .line-break {
     display: block;
     margin-top: 10px;
+  }
+}
+@include phone{
+  .contact-label{
+    width: 100%;
   }
 }
