建立project card，增加重置位置功能

--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -9,3 +9,4 @@
 @import './helpers/pages/home';
 @import './helpers/pages/index';
 @import './helpers/pages/contact';
+@import './helpers/pages/project';
