--- a/src/assets/scss/helpers/_font.scss
+++ b/src/assets/scss/helpers/_font.scss
@@ -15,3 +15,7 @@
     font-family: "GenJyuuGothic-Bold";
     src: url(assets/fonts/GenJyuuGothic-Bold.ttf);
 }
+@font-face {
+    font-family: "FranklinGothicHeavy-Regular";
+    src: url(assets/fonts/FranklinGothicHeavy-Regular.ttf);
+}
