--- a/src/assets/scss/helpers/pages/_postProduction.scss
+++ b/src/assets/scss/helpers/pages/_postProduction.scss
@@ -27,3 +27,13 @@
         }        
     }
 }
+@include phone{
+    .post{
+        header{
+            span{
+                display: block;
+                margin-top: 10px;
+            }
+        }
+    }
+}
