--- a/src/assets/scss/helpers/pages/_singleProject.scss
+++ b/src/assets/scss/helpers/pages/_singleProject.scss
@@ -37,35 +37,94 @@
   }
 }
 
-/* single credit */
-.single{
-  .credit{
-    margin-top: 100px;
-    padding-bottom: 100px;
+/* credit */
+.credit{
+  margin-top: 100px;
+  padding-bottom: 100px;
+  h3{
+    padding-bottom: 8px;
+    border-bottom: 3px;
+    border-style: solid;
+    border-color: $s-yellow;  
+    margin-bottom: 40px;
+  }
+  p{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1rem;
+    letter-spacing: 1.8px;
+    line-height: 40px;
+  }
+}
+.space-right{
+  margin-right: 25px;
+}
+.credit-containter,.other-containter{
+  width: 100%;
+}
+.credit-title,.other-title{
+  font-weight: bold;
+}
+.width-half{
+  width: 50%;
+}
+
+
+/* series */
+.part-content{
+  p{
+    font-size: 1rem;
+    letter-spacing: 1.6px;
+    line-height: 30px;
+  }
+  .part-center{
+    text-align: center;
+    margin: 40px 0 !important;
+  }
+}
+.line-dark{
+  width: 100%;
+  height: 1px;
+  background-color: #000;
+}
+.series{
+  h3{
+    border-color: #1100FF;  
+  }
+  .part-credit{
     h3{
+      display: inline-block;
       padding-bottom: 8px;
       border-bottom: 3px;
-      border-style: solid;
-      border-color: $s-yellow;  
-      margin-bottom: 40px;
+      border-style: solid; 
+      margin: 0px 0 20px;  
+      border-color: #1100FF;
+      &:hover{
+        cursor: pointer;
+      }
     }
+  }
+  .behind{
+    margin: 100px 0;
+    h3{
+    margin-bottom: 40px;
+    }
+    img{
+      display: block;
+      width: 100%;
+      height: auto;
+    }
+  }
+  .credit-list{
+    display: none;
+    margin: 0 0 20px;
     p{
       font-family: Arial, Helvetica, sans-serif;
       font-size: 1rem;
       letter-spacing: 1.8px;
       line-height: 40px;
+      &.empty-row{
+        margin-top: 16px;
+      }
     }
-  }
-  .space-right{
-    margin-right: 25px;
-  }
-  .credit-containter,.other-containter{
-    width: 100%;
-  }
-  .credit-title,.other-title{
-    font-weight: bold;
-  }
-  .width-half{
-    width: 50%;
   }
 }
