修改表單回饋，增加check modal，修改lightbox手機不顯示

--- a/src/assets/scss/helpers/pages/_contact.scss
+++ b/src/assets/scss/helpers/pages/_contact.scss
@@ -125,6 +125,14 @@
     }
   }
 }
+@include phone{
+  .customer-info{
+    .btn-style{
+      width: 100%;
+      padding: 10px 0;
+    }
+  }
+}
 
 /* contact us */
 .contact-us {
@@ -154,4 +162,17 @@
   .contact-label{
     width: 100%;
   }
+}
+
+/* check modual */
+.check-pos {
+  top: 50%;
+  transform: translateY(-50%) !important;
+  z-index: 2;
+}
+.check-space {
+  margin: 0 auto;
+  width: 300px;
+  background-color: #fff;
+  padding: 50px;
 }
