--- a/src/assets/scss/helpers/pages/_contact.scss
+++ b/src/assets/scss/helpers/pages/_contact.scss
@@ -1,7 +1,7 @@
 .contact {
   h2 {
     font-family: "GenJyuuGothic-Bold";
-    font-size: 40px;
+    font-size: 35px;
     letter-spacing: 4px;
   }
   p {
@@ -15,14 +15,74 @@
     span{
       display: block;
     }
+    .title-center{
+      h2,p{
+        text-align: center;
+      }
+    }
   }
 }
 
-/* Workflow detail */
+/* Workflow */
 .workflow-spacing {
   padding-top: 180px;
+  .bg-color{
+    background-color: #eeeeee;
+  }
+  .work-title{
+    margin-top: 30px;
+    position: relative;
+    h3 {
+    font-family: "GenJyuuGothic-Heavy";
+    font-size: 20px;
+    letter-spacing: 2px;
+    span{
+      font-family: "GenJyuuGothic-Medium";
+      display: block;
+      font-size: 12px;
+      line-height: 20px;
+      }
+    }
+    p {
+      font-family: "GenJyuuGothic-Medium";
+      font-size: 15px;
+      letter-spacing: 2px;
+      white-space: nowrap;
+    }
+    img {
+      display: block;
+      width: 36px;
+      height: 36px;
+    }
+    .work-left-space{
+      margin-left: 60px;
+    }
+    .order{
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 2;
+    }
+    .order-line{
+      width: 1px;
+      background-color: #ACACAC;
+      position: absolute;
+      top: 0;
+      bottom: -48px;
+      left: 18px;
+    }
+  }
 }
-//修改
+@include phone{
+  .workflow-spacing{
+    .work-title{
+      .work-left-space{
+        margin-left: 50px;
+      }
+    }
+  }
+}
+
 .detail {
   font-family: "GenJyuuGothic-Regular";
   letter-spacing: 2px;
@@ -30,13 +90,20 @@
   li {
     display: block;
     text-align: left !important;
-    // white-space: nowrap;
-    margin-top: 20px;
+    line-height: 40px;
+    .post-space{
+      font-size: 18px;
+      font-family: "GenJyuuGothic-Regular";
+      margin-left: 28px;
+    }
   }
   span {
     font-size: 14px;
     font-family: "GenJyuuGothic-Regular";
     letter-spacing: 2px;
+  }
+  .breakpoint,.breakpoint-limit{
+    font-size: 18px;
   }
   &:first-child {
     margin-top: 0;
@@ -44,57 +111,94 @@
   .example {
     font-size: 14px;
     line-height: 30px;
-    margin-top: 10px;
     margin-left: 30px;
   }
-}
-.txtpos {
-  top: 250px;
-  position: absolute;
-}
-@include desktop {
-  .txtpos {
-    position: initial;
+  .edit {
+    display: inline-block;
+    font-family: "GenJyuuGothic-Medium";
+    font-size: 15px;
+    line-height: 15px;
+    padding: 4px 8px;
+    color: #fff;
+    background-color: #c40000;
+    border-radius: 12px;
+  }
+  .cloud{
+    display: table;
+    text-align: justify;
+    margin-left: 36px;
+    line-height: 30px;
+  }
+  .detail-red{
+    color:#c40000;
+  }
+  .process {
+    font-family: "GenJyuuGothic-Medium";
+    font-size: 20px;
+    background-color: #f0c879;
+    border-radius: 27px;
+    line-height: 30px;
+    padding: 6px 12px;
+  }
+  .percent {
+    font-family: "GenJyuuGothic-Medium";
+    font-size: 14px;
+  }
+  .content {
+    margin-top: 4px;
+    line-height: 30px;
+    font-size: 18px;
   }
 }
 
-.edit {
-  display: table;
-  margin: 0 auto;
-  font-family: "GenJyuuGothic-Medium";
-  font-size: 14px;
-  line-height: 15px;
-  padding: 4px 8px;
-  color: #fff;
-  background-color: #c40000;
-  border-radius: 12px;
+@media(max-width: 1000px){
+  .detail{
+    .breakpoint{
+      display: block;
+      margin-left: 24px;
+      line-height: 20px;
+      margin-bottom: 10px;
+    }
+    .breakpoint-limit{
+      display: block;
+      line-height: 20px;
+      margin-bottom: 10px;
+    }
+  }
 }
-.process {
-  font-family: "GenJyuuGothic-Medium";
-  background-color: #f0c879;
-  border-radius: 27px;
-  line-height: 30px;
-  padding: 6px 12px;
+@include phone{
+  .detail{
+    li{
+      font-size: 16px;
+      .example{
+        font-size: 12px;
+      }
+      .post-space{
+        font-size: 16px;
+      }
+    }
+  }
 }
-.percent {
-  font-family: "GenJyuuGothic-Medium";
-  font-size: 14px;
-}
-.content {
-  margin-top: 4px;
-  line-height: 30px;
-  font-size: 18px;
-}
+
 
 /* customer info */
 .customer-info {
   font-family: "GenJyuuGothic-Bold";
-  margin-top: 560px;
-  p {
+  margin-top: 70px;
+  p{
     line-height: 30px;
+  }
+  .alert-text{
+    font-size: 15px;
   }
   label {
     font-size: 18px;
+  }
+  select{
+    display: block;
+    background-color: #f5f5f5;
+    border: none;
+    height: 100%;
   }
   .input-style {
     -webkit-appearance: none;
@@ -143,24 +247,20 @@
     font-size: 30px;
   }
 }
-.contact-label {
-  width: 25%;
-  .label-style {
-    display: inline-block;
-    padding: 0 10px;
-    color: #fff;
-    background-color: #b5b5b5;
-  }
+.label-style {
+  display: inline-block;
+  padding: 0 10px;
+  color: #fff;
+  background-color: #b5b5b5;
+}
+map{
+  width: auto;
+  height: 200px;
 }
 @include ipad {
   .line-break {
     display: block;
     margin-top: 10px;
-  }
-}
-@include phone{
-  .contact-label{
-    width: 100%;
   }
 }
 
