--- a/src/assets/scss/helpers/pages/_postProduction.scss
+++ b/src/assets/scss/helpers/pages/_postProduction.scss
@@ -3,6 +3,9 @@
     header {
         height: 634px;
         position: relative;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
         h2 {
             font-family: Arial, Helvetica, sans-serif;
             font-size: 30px;
