修改 字句內容與新增作品

--- a/src/assets/scss/helpers/_font.scss
+++ b/src/assets/scss/helpers/_font.scss
@@ -19,3 +19,7 @@
     font-family: "FranklinGothicHeavy-Regular";
     src: url(assets/fonts/FranklinGothicHeavy-Regular.ttf);
 }
+@font-face {
+    font-family: "BradburySans-Light";
+    src: url(assets/fonts/BradburySans-Light.ttf);
+}
