--- a/src/assets/scss/helpers/pages/_singleProject.scss
+++ b/src/assets/scss/helpers/pages/_singleProject.scss
@@ -13,7 +13,7 @@
     letter-spacing: 2px;
   }
   h2,h3 {
-    font-family: "GenJyuuGothic-Heavy";
+    font-family: "GenJyuuGothic-Bold";
   }
   p{
     font-family: "GenJyuuGothic-Regular";
