--- a/src/assets/scss/helpers/pages/_home.scss
+++ b/src/assets/scss/helpers/pages/_home.scss
@@ -1,6 +1,6 @@
 /* navbar */
 nav {
-  width: 70%;
+  width: 98%;
   padding: 25px !important;
   position: absolute !important;
   top: 0;
@@ -8,12 +8,13 @@ nav {
   transform: translate(-50%, 0);
   z-index: 999;
   h1 {
-    font-family: "Gill Sans", "Gill Sans MT";
+    font-family: "BradburySans-Light";
+    font-weight: bold;
     letter-spacing: 1.86px;
     a {
       display: block;
-      font-size: 22px;
-      letter-spacing: 1.36px;
+      font-size: 18px;
+      letter-spacing: 3px;
       color: #fff;
       &:hover {
         color: #fff;
@@ -22,12 +23,13 @@ nav {
     }
   }
   .main-item {
-    font-family: "GenJyuuGothic-Heavy";
+    font-family: "GenJyuuGothic-bold";
     li {
       margin-left: 30px;
     }
     a {
-      font-size: 18px;
+      font-size: 14px;
+      letter-spacing: 0.8px;
       display: block;
       color: #fff;
       &:hover {
@@ -75,7 +77,7 @@ nav {
   &:after {
     content: "";
     position: absolute;
-    bottom: -6px;
+    bottom: -8px;
     left: 0;
     width: 100%;
     height: 3px;
@@ -94,7 +96,7 @@ nav {
   &.black:after {
     content: "";
     position: absolute;
-    bottom: -6px;
+    bottom: -8px;
     left: 0;
     width: 100%;
     height: 3px;
