--- a/src/assets/scss/helpers/pages/_index.scss
+++ b/src/assets/scss/helpers/pages/_index.scss
@@ -122,7 +122,7 @@
   }
   h3 {
     font-family: "GenJyuuGothic-Medium";
-    font-size: 35px;
+    font-size: 30px;
     letter-spacing: 3.5px;
   }
   p {
@@ -175,7 +175,12 @@
     font-family: "GenJyuuGothic-Medium";
     font-size: 12px;
     letter-spacing: 2px;
+    line-height: 12px;
     white-space: nowrap;
+    span{
+      display: block;
+      margin-top: 4px
+    }
   }
   img {
     display: block;
