--- a/src/assets/scss/helpers/pages/_postProduction.scss
+++ b/src/assets/scss/helpers/pages/_postProduction.scss
@@ -9,15 +9,26 @@
         h2 {
             font-family: Arial, Helvetica, sans-serif;
             font-size: 30px;
-            position: absolute;
+            font-weight: bold;
+            letter-spacing: 3px;
             white-space: nowrap;
+            position: absolute;
             top: 50%;
-            left: 70%;
+            left: 50%;
             transform: translate(-50%, -50%);
+            z-index: 3;
         }
         span {
-            font-family: "FranklinGothicHeavy-Regular";
-            letter-spacing: 3px;
+            font-family: "GenJyuuGothic-bold";
+            font-size: 20px;
+            display: block;
+            text-align: center;
+            margin-top: 10px;
+        }
+        .black-opacity{
+            width: 100%;
+            height: 634px;
+            background-color: rgba(0,0,0,0.4);
         }
     }
 }
