--- a/src/assets/scss/helpers/pages/_project.scss
+++ b/src/assets/scss/helpers/pages/_project.scss
@@ -9,15 +9,20 @@
         h2 {
             font-family: Arial, Helvetica, sans-serif;
             font-size: 30px;
+            font-weight: bold;
+            letter-spacing: 3px;
             white-space: nowrap;
             position: absolute;
             top: 50%;
-            left: 70%;
+            left: 50%;
             transform: translate(-50%, -50%);
         }
         span {
-            font-family: "FranklinGothicHeavy-Regular";
-            letter-spacing: 3px;
+            font-family: "GenJyuuGothic-bold";
+            font-size: 20px;
+            display: block;
+            text-align: center;
+            margin-top: 10px;
         }
     }
 }
@@ -66,7 +71,7 @@
         &:after {
             content: "";
             position: absolute;
-            bottom: -6px;
+            bottom: -10px;
             left: 0;
             width: 100%;
             height: 3px;
