--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -11,4 +11,5 @@
 @import './helpers/pages/contact';
 @import './helpers/pages/project';
 @import './helpers/pages/postProduction';
+@import './helpers/pages/film';
 @import './helpers/pages/singleProject';
