--- a/src/assets/scss/helpers/pages/_home.scss
+++ b/src/assets/scss/helpers/pages/_home.scss
@@ -66,6 +66,10 @@ nav {
     a{
       padding: 20px;
     }
+    span{
+      display: block;
+      padding: 20px;
+    }
     &.active{
       transform: translate(-0.5px,0);
     }
@@ -147,6 +151,7 @@ footer {
     }
     i {
       letter-spacing: 4px;
+      padding-right: 12px;
       color: #fff;
     }
   }
